--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -80,7 +80,26 @@
         color: #3183F3;
     }
 
-    @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&display=swap');
+    @font-face {
+        font-family: "Manrope";
+        font-style: normal;
+        font-weight: 500;
+        src: url("../fonts/PPNeueMachina-Medium.woff2") format("woff2");
+    }
+
+    @font-face {
+        font-family: "Manrope";
+        font-style: normal;
+        font-weight: 600;
+        src: url("../fonts/Manrope-SemiBold.woff2") format("woff2");
+    }
+
+    @font-face {
+        font-family: "Manrope";
+        font-style: normal;
+        font-weight: 700;
+        src: url("../fonts/Manrope-Bold.woff2") format("woff2");
+    }
         
     * {
         margin: 0;
@@ -114,25 +133,25 @@
 
     h1 {
         font-weight: 500;
-        font-size: 64px;
-        line-height: 76px;
+        font-size: 52px;
+        line-height: 60px;
     }
 
     h2 {
         font-weight: 500;
-        font-size: 40px;
-        line-height: 48px;
+        font-size: 36px;
+        line-height: 44px;
     }
     
     h3 {
         font-weight: 600;
-        font-size: 28px;
+        font-size: 24px;
         line-height: 32px;
     }
     
     h4 {
         font-weight: 600;
-        font-size: 24px;
+        font-size: 20px;
         line-height: 28px;
     }
 
@@ -143,9 +162,9 @@
     }
      
     .regular-text { 
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 24px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
     }
 
     .small-bold-text {
@@ -156,16 +175,10 @@
         text-transform: uppercase;
     }
 
-    .small-semibold-text {
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
     .btn-link-text {
         font-weight: 700;
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 14px;
+        line-height: 20px;
     }
 
     @media (max-width: 500px) {
@@ -195,22 +208,14 @@
     
         .semibold-text {
             font-weight: 600;
-            font-size: 16px;
+            font-size: 14px;
             line-height: 20px;
         }
          
         .regular-text { 
-            font-weight: 600;
+            font-weight: 500;
             font-size: 14px;
             line-height: 20px;
-        }
-    
-        .small-bold-text {
-            font-weight: 700;
-            font-size: 12px;
-            line-height: 16px;
-            letter-spacing: 0.05em;
-            text-transform: uppercase;
         }
     
         .small-semibold-text {
@@ -221,7 +226,7 @@
     
         .btn-link-text {
             font-weight: 700;
-            font-size: 16px;
+            font-size: 14px;
             line-height: 20px;
         }
 
