--- a/pages/admin/admin.css
+++ b/pages/admin/admin.css
@@ -125,6 +125,14 @@
     justify-content: space-between;
 }
 
+.snippet .event-card .card-top .name-time {
+    display: flex;
+}
+
+.snippet .event-card .card-top .duration.mobile-duration {
+    display: none;
+}
+
 .snippet .event-card .card-top .event-name {
     font-weight: 600;
     font-size: 14px;
@@ -153,12 +161,13 @@
     margin-right: 8px;
 }
 
-.snippet .event-card .card-top .join-link {
+.snippet .event-card .join-link {
     display: block;
     background-color: #A24DE8;
     color: #FFFFFF;
     border-radius: 4px;
     padding: 8px 12px;
+    text-align: center;
 }
 
 .snippet .event-card .card-bottom {
@@ -167,7 +176,7 @@
     justify-content: space-between;
 }
 
-.snippet .event-card .card-bottom .duration {
+.snippet .event-card .duration {
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
@@ -272,7 +281,7 @@
     margin-bottom: 40px;
 }
 
-.sidebar .company .company-toggle {
+.company-toggle {
     display: block;
     width: 24px;
     height: 24px;
@@ -335,6 +344,11 @@
     background-image: url("../../images/john.png");
 }
 
+.your-company-mobile {
+    display: none;
+    padding: 12px 16px;
+}
+
 @media (max-width: 1300px) {
     .container-content {
         width: 67%;
@@ -381,12 +395,40 @@
         padding: 12px 15px;
     }
 
+    .mobile-container {
+        margin-top: 16px;
+        padding: 0 15px;
+    }
+
+    .your-company-mobile {
+        display: block;
+        border: 1px solid #DDDDDD;
+        border-radius: 8px;
+    }
+
+    .sidebar-header span {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .your-company-mobile .company {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
+    .your-company-mobile .link-purple {
+        margin-top: 25px;
+    }
+
     .wrapper .navigation-mobile {
         display: block;
     }
 
     .background-container {
         flex-direction: column;
+        margin-top: 24px;
+        padding: 0;
     }
 
     .sidebar {
@@ -394,10 +436,97 @@
     }
 
     .container-content {
+        width: 100%;
         padding: 16px;
     }
 
     .container-content .information .data-time {
         flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .container-content .information .date {
+        margin-left: 0;
+    }
+
+    .snippet {
+        justify-content: center;
+        height: fit-content;
+        margin-bottom: 16px;
+    }
+
+    .snippet.empty {
+        display: none;
+    }
+
+    .snippet-event-container {
+        width: 100%;
+        margin-left: 0;
+        border-top: none;
+        padding-top: 0;
+        flex-direction: column;
+    }
+
+    .snippet .snippet-time {
+        display: none;
+    }
+
+    .snippet .event-card {
+        padding: 12px 16px;
+    }
+
+    .snippet .event-card .card-top {
+        margin-bottom: 23px;
+    }
+
+    .snippet .event-card:nth-child(2) {
+    margin-top: 16px;
+    }
+
+    .snippet .event-card .card-top .join-link {
+        display: none;
+    }
+
+    .join-link-mobile {
+        margin-top: 16px;
+    }
+
+    .snippet .event-card .card-bottom .duration {
+        display: none;
+    }
+
+    .snippet .event-card .card-top .name-time {
+        flex-direction: column;
+        width: 55%;
+    }
+
+    .snippet .event-card .card-top .event-name {
+        margin-bottom: 4px;
+    }
+
+    .snippet .event-card .card-top .duration.mobile-duration {
+        display: block;
+    }
+
+    .snippet .event-card .card-top .duration.mobile-duration span {
+        display: block;
+    }
+
+    .snippet .event-card .card-top .time-counter {
+        margin: 0;
+    }
+
+    .event-card.two-hour {
+        position: relative;
+        z-index: 0;
+        top: 0;
+    }
+
+    .event-card.half-snippet {
+        width: 100%;
+    }
+
+    .event-card.not-started {
+        height: fit-content;
     }
 }
