--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -16,6 +16,7 @@
         --purple-200: #E7D1F9;
         --purple-300: #DDBFF7;
         --purple-400: #A24DE8;
+        --green-300: #51B267;
     }
 
 
