--- a/components/select/index.html
+++ b/components/select/index.html
@@ -29,6 +29,7 @@
             <div class="select__item">Item</div>
             <div class="select__item">Item</div>
             <div class="select__item border">Item</div>
+            <span class="select-border"></span>
             <div class="select__clear-btn">Clear</div>
 
         </div>
