--- a/components/select/index.css
+++ b/components/select/index.css
@@ -71,11 +71,19 @@
     border-bottom: 1px solid #E6E6E6;
 }
 
+.select-border {
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 12px 0;
+    background-color: var(--gray-300);
+}
+
 .select__clear-btn {
     display: flex;
     justify-content: center;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding: 8px 14px;
+    border-radius: 8px  ;
 
     font-weight: 700;
     font-size: 14px;
