--- a/pages/Company/EditCompany/index.css
+++ b/pages/Company/EditCompany/index.css
@@ -47,6 +47,14 @@ h1 {
     border: 1px solid var(--green-300);
 }
 
+.company-edit-alert {
+    display: none;
+}
+
+.company-edit-alert.shown {
+    display: flex;
+}
+
 .alert .regular-text {
     font-size: 14px;
     line-height: 20px;
@@ -194,7 +202,7 @@ h1 {
     }
 
     .content-header .header-title {
-        margin-bottom: 16px;
+        margin-bottom: 24px;
     }
 
     .content-header .button-wrap .header-btn {
@@ -233,24 +241,19 @@ h1 {
 
 @media screen and (max-width: 1279px) {
 
+    .alert {
+        padding: 12px;
+    }
+
     .content {
         padding: 40px;
     }
 
-    /*.content-header {*/
-    /*    flex-direction: column-reverse;*/
-    /*}*/
-
     .content-header .header-title {
-        /*margin-bottom: 0;*/
         margin-bottom: 24px;
         font-size: 32px;
         line-height: 36px;
     }
-
-    /*.content-header .button-wrap {*/
-    /*    margin-bottom: 24px;*/
-    /*}*/
 
     .content-header .button-wrap .header-btn {
         min-width: 164px;
@@ -339,6 +342,20 @@ h1 {
 }
 
 @media screen and (max-width: 1079px) {
+
+    .alert {
+        display: flex;
+        align-items: flex-start;
+        top: 20px;
+        right: 15px;
+        z-index: 1;
+        margin-left: 15px;
+    }
+
+    .alert svg {
+        width: 20px;
+        height: 20px;
+    }
 
     /*Submenu*/
 
